--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-collapsible": "^0.11.3",
     "react-native-elements": "^0.19.1",
+    "react-native-fontawesome": "^5.7.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.4"
   }
