--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-collapsible": "^0.11.3",
     "react-native-elements": "^0.19.1",
     "react-native-fontawesome": "^5.7.0",
+    "react-native-tabs": "^1.0.9",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.4"
   }
