--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-multiple-select-list": "^1.0.4",
     "react-native-tabs": "^1.0.9",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^2.0.4"
+    "react-navigation": "^2.0.4",
+    "react-string-replace": "^0.4.1"
   }
 }
